--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -258,20 +258,17 @@
 
 #main_body .routine_card .setting_popup {
   position: absolute;
-  top: 0.5rem;
-  right: 2.5rem; /* setting 버튼 기준 위치 조정 */
+  top: 0rem;
+  right: 0rem; /* setting 버튼 기준 위치 조정 */
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #333;
   border-radius: 0.5rem;
-  box-shadow: 0 0 5px rgba(0,0,0,0.1);
-  font-size: 0.85rem;
   z-index: 10;
 }
 
 #main_body .routine_card .setting_popup ul {
   list-style: none;
   margin: 0;
-  padding: 0.5rem;
 }
 
 #main_body .routine_card .setting_popup li {
@@ -280,8 +277,13 @@
   white-space: nowrap;
 }
 
-#main_body .routine_card .setting_popup li:hover {
-  background-color: #f5f5f5;
+#main_body .routine_card .setting_popup .close {
+  position:absolute;
+  top:0.5rem;
+  left:0.5rem;
+  width:0.5rem;
+  height:0.5rem;
+  background: url('../images/ico_close.png') no-repeat 0 0/100%
 }
 
 #main_body .routine_card .rc_inner p.term {
