--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -262,27 +262,17 @@
   right: 0rem; /* setting 버튼 기준 위치 조정 */
   background: #fff;
   border: 1px solid #333;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  padding:1rem;
   z-index: 10;
-}
-
-#main_body .routine_card .setting_popup ul {
-  list-style: none;
-  margin: 0;
-}
-
-#main_body .routine_card .setting_popup li {
-  padding: 0.3rem 0.8rem;
-  cursor: pointer;
-  white-space: nowrap;
 }
 
 #main_body .routine_card .setting_popup .close {
   position:absolute;
   top:0.5rem;
-  left:0.5rem;
-  width:0.5rem;
-  height:0.5rem;
+  rightt:0.5rem;
+  width:1rem;
+  height:1rem;
   background: url('../images/ico_close.png') no-repeat 0 0/100%
 }
 
