--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -265,15 +265,36 @@
   border-radius: 1rem;
   padding:1rem;
   z-index: 10;
+  font-size:0.9rem;
 }
 
 #main_body .routine_card .setting_popup .close {
   position:absolute;
   top:0.5rem;
-  rightt:0.5rem;
+  right:0.5rem;
   width:1rem;
   height:1rem;
   background: url('../images/ico_close.png') no-repeat 0 0/100%
+}
+
+#main_body .routine_card .setting_popup button {
+  padding-left:2rem;
+}
+
+#main_body .routine_card .setting_popup button.modify {
+  background: url('../images/ico_modify.png') no-repeat 0 0/1rem 1rem
+}
+
+#main_body .routine_card .setting_popup button.lock {
+  background: url('../images/ico_lock.png') no-repeat 0 0/1rem 1rem
+}
+
+#main_body .routine_card .setting_popup button.share {
+  background: url('../images/ico_share02.png') no-repeat 0 0/1rem 1rem
+}
+
+#main_body .routine_card .setting_popup button.del {
+  background: url('../images/ico_del.png') no-repeat 0 0/1rem 1rem
 }
 
 #main_body .routine_card .rc_inner p.term {
