--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -263,7 +263,7 @@
   background: #fff;
   border: 1px solid #333;
   border-radius: 1rem;
-  padding:1rem;
+  padding:1.5rem;
   z-index: 10;
   font-size:0.9rem;
 }
@@ -274,7 +274,8 @@
   right:0.5rem;
   width:1rem;
   height:1rem;
-  background: url('../images/ico_close.png') no-repeat 0 0/100%
+  border:1px solid red
+  background: url('../images/ico_close.png') no-repeat 0 0/cover
 }
 
 #main_body .routine_card .setting_popup button {
@@ -282,19 +283,19 @@
 }
 
 #main_body .routine_card .setting_popup button.modify {
-  background: url('../images/ico_modify.png') no-repeat 0 0/1rem 1rem
+  background: url('../images/ico_modify.png') no-repeat 0 0.1rem/1rem 1rem
 }
 
 #main_body .routine_card .setting_popup button.lock {
-  background: url('../images/ico_lock.png') no-repeat 0 0/1rem 1rem
+  background: url('../images/ico_lock.png') no-repeat 0 0.1rem/1rem 1rem
 }
 
 #main_body .routine_card .setting_popup button.share {
-  background: url('../images/ico_share02.png') no-repeat 0 0/1rem 1rem
+  background: url('../images/ico_share02.png') no-repeat 0 0.1rem/1rem 1rem
 }
 
 #main_body .routine_card .setting_popup button.del {
-  background: url('../images/ico_del.png') no-repeat 0 0/1rem 1rem
+  background: url('../images/ico_del.png') no-repeat 0 0.1rem/1rem 1rem
 }
 
 #main_body .routine_card .rc_inner p.term {
