--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -274,7 +274,7 @@
   right:0.5rem;
   width:1rem;
   height:1rem;
-  border:1px solid red
+  border:1px solid red;
   background: url('../images/ico_close.png') no-repeat 0 0/cover
 }
 
