--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -278,25 +278,29 @@
   background: url('../images/ico_close.png') no-repeat 0 0/100%!important
 }
 
+#main_body .routine_card .setting_popup .close_spop span {
+  display:none
+}
+
 #main_body .routine_card .setting_popup button {
   padding-left:2rem;
   line-height:1.3rem;
 }
 
 #main_body .routine_card .setting_popup button.modify {
-  background: url('../images/ico_modify.png') no-repeat 0 50%/1rem 1rem
+  background: url('../images/ico_modify.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .setting_popup button.lock {
-  background: url('../images/ico_lock.png') no-repeat 0 50%/1rem 1rem
+  background: url('../images/ico_lock.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .setting_popup button.share {
-  background: url('../images/ico_share02.png') no-repeat 0 50%/1rem 1rem
+  background: url('../images/ico_share02.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .setting_popup button.del {
-  background: url('../images/ico_del.png') no-repeat 0 50%/1rem 1rem
+  background: url('../images/ico_del.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .rc_inner p.term {
