--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -275,7 +275,7 @@
   width:1rem!important;
   height:1rem!important;
   border:1px solid red;
-  padding:0
+  padding:0;
   background: url('../images/ico_close.png') no-repeat 0 0/100%!important
 }
 
