--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -272,8 +272,8 @@
   position:absolute;
   top:0.8rem;
   right:0.8rem;
-  width:1.2rem;
-  height:1.2rem;
+  width:1rem;
+  height:1rem;
   padding:0;
   background: url('../images/ico_close.png') no-repeat 0 0/100%!important
 }
@@ -284,23 +284,24 @@
 
 #main_body .routine_card .setting_popup button {
   padding-left:2rem;
-  line-height:1.2rem;
+  line-height:1rem;
+  height:1rem;
 }
 
 #main_body .routine_card .setting_popup button.modify {
-  background: url('../images/ico_modify.png') no-repeat 0 -0.1rem/0.9rem 0.9rem
+  background: url('../images/ico_modify.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .setting_popup button.lock {
-  background: url('../images/ico_lock.png') no-repeat 0 -0.1rem/0.9rem 0.9rem
+  background: url('../images/ico_lock.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .setting_popup button.share {
-  background: url('../images/ico_share02.png') no-repeat 0 -0.1rem/0.9rem 0.9rem
+  background: url('../images/ico_share02.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .setting_popup button.del {
-  background: url('../images/ico_del.png') no-repeat 0 -0.1rem/0.9rem 0.9rem
+  background: url('../images/ico_del.png') no-repeat 0 50%/0.9rem 0.9rem
 }
 
 #main_body .routine_card .rc_inner p.term {
