--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -109,6 +109,7 @@ button.add {
   border-radius:50%;
   background: url('../images/ico_add.png') no-repeat 0 0/100%;
   background-color:#fff;
+  z-index:888
 }
 button.home {
   background: url('../images/ico_home.png') no-repeat 0 0/100%;
