--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -15,7 +15,7 @@ body.no-scroll {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  z-index: 999!important;
   overscroll-behavior: contain;
   touch-action: none;
 }
