--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -234,8 +234,9 @@
 #main_body .routine_card .rc_inner p.title {
   font-weight:bold;
   color:#333;
+  font-size:1.2rem;
   margin-bottom:0.5rem;
-  line-height:1.3rem;
+  line-height:1.4rem;
   padding-left:0
 }
 
