--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -234,9 +234,10 @@
 #main_body .routine_card .rc_inner p.title {
   font-weight:bold;
   color:#333;
-  font-size:1.2rem;
+  font-size:1.1rem;
   margin-bottom:0.5rem;
-  line-height:1.4rem;
+  line-height:1.3rem;
+  letter-spacing:-0.02rem;
   padding-left:0
 }
 
