--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -234,11 +234,11 @@
 #main_body .routine_card .rc_inner p.title {
   font-weight:bold;
   color:#333;
-  font-size:1.1rem;
+  font-size:1rem;
   margin-bottom:0.5rem;
-  line-height:1.3rem;
+  line-height:1.2rem;
   letter-spacing:-0.02rem;
-  padding-left:0
+  padding:0 0 0.5rem 0
 }
 
 #main_body .routine_card .rc_inner p.title span {
