--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -186,6 +186,13 @@
 #main_body .routine_card.rt_off {
   opacity: 0.5;
   pointer-events: none;
+  position: relative;
+}
+
+#main_body .routine_card.rt_off .setting {
+  pointer-events: auto;
+  position: relative;
+  z-index: 1;
 }
 
 #main_body .routine_card .rc_inner {
