--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -184,12 +184,13 @@
 }
 
 #main_body .routine_card.rt_off {
-  opacity: 0.5;
-  position: relative;
+  border:1px solid #eee
+  background-color:#f5f5f5
 }
 
-#main_body .routine_card.rt_off .setting {
-  z-index: 2;
+#main_body .routine_card.rt_off rc_inner {
+  opacity: 0.3;
+  position: relative;
 }
 
 #main_body .routine_card .rc_inner {
