--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -188,7 +188,7 @@
   background-color:#f5f5f5
 }
 
-#main_body .routine_card.rt_off rc_inner {
+#main_body .routine_card.rt_off .rc_inner {
   opacity: 0.3;
   position: relative;
 }
