--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -55,7 +55,7 @@
 .popup_wrap .popup_inner {
 	margin: 0.5rem 0 7rem 0;
 	background-color:#fff;
-	padding:0 1.5rem 0 2rem;
+	padding:0 1.5rem 1rem 2rem;
   border-radius:1.5rem;
   border:1px solid #ececec;
 	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
@@ -103,7 +103,7 @@
 	width:100%;
 	text-align:center;
 	margin:0;
-  font-size:1.2rem;
+  font-size:1.1rem;
 }
 
 .form_box_g input[type="text"].uline {
