--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -56,8 +56,8 @@
 html, body {
   height: 100%;
   font-family: 'S-CoreDream-4Regular',/*'SUIT-Regular',*/ 'Apple SD Gothic Neo', sans-serif;
-  font-size: 0.98rem;
-  line-height: 1.6rem;
+  font-size: 0.9rem;
+  line-height: 1.6em;
   color: #333;
   letter-spacing:-0.01rem;
   -webkit-font-smoothing: antialiased;
