--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -56,6 +56,7 @@ body.no-scroll {
   border-radius: 1.5rem;
   background-color:#f5f5f5;
   border:1px solid #ddd;
+	font-size:0.9rem
 }
 
 .com_popup_wrap .popup_inner .popup_tit h2 {
@@ -119,6 +120,7 @@ body.no-scroll {
 
 
 .done_check_wrap {
+	
 }
 
 .done_check_wrap .state_group {
@@ -134,7 +136,8 @@ body.no-scroll {
   background-color:#f9f9f9;
   border:1px solid #ddd;
   padding:0.5rem;
-  padding-left:2.5rem
+  padding-left:2.5rem;
+	font-size:0.95rem
 }
 
 .done_check_wrap .state_group span.well_done {
