--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -56,7 +56,7 @@ body.no-scroll {
   border-radius: 1.5rem;
   background-color:#f5f5f5;
   border:1px solid #ddd;
-	font-size:0.9rem
+	font-size:0.92rem;
 }
 
 .com_popup_wrap .popup_inner .popup_tit h2 {
@@ -137,7 +137,6 @@ body.no-scroll {
   border:1px solid #ddd;
   padding:0.5rem;
   padding-left:2.5rem;
-	font-size:0.95rem
 }
 
 .done_check_wrap .state_group span.well_done {
