--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -139,6 +139,11 @@
   background: url('https://img.icons8.com/parakeet-line/50/cloud-checked.png') no-repeat 0 0/2rem 2rem;
 }
 
+#main_body .routine_total p span a.fail_done {
+  background: url('../images/ico_cry.png') no-repeat 0 0/2rem 2rem;
+}
+
+
 #main_body .routine_total p span a.ignored {
   background: url('https://img.icons8.com/parakeet-line/50/dashed-cloud.png') no-repeat 0 0/2rem 2rem;
 }
@@ -148,6 +153,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 1rem 0;
+  font-size:0.9rem;
 }
 
 #main_body .routine_total .filter_row .filter_label button {
@@ -163,7 +169,7 @@
 }
 
 #main_body .routine_total .filter_row .custom-radio {
-  margin-left:0.2rem
+  margin-left:0.1rem
 }
 
 #main_body .routine_total .filter_row .today,
