--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -27,8 +27,12 @@
   position: relative;
   overflow-x: auto;
   border-radius:1.5rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   background-color:#fff;
   border:1px solid #eaeaea;
+  border-bottom:none;
+  padding:1rem
 }
 
 #main_body .date_fixed_today {
@@ -62,8 +66,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid #ececec;
-  border-radius: 1rem;
   padding: 0.4rem 1rem;
   line-height: 1.1rem;
   font-size: 1rem;
