--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -96,13 +96,10 @@
 }
 
 #main_body .routine_total p:first-child {
-  height:4rem;
   background-color:#797eff;
-  border:1px solid #eaeaea;
-  border-top:none;
-  border-bottom:none;
   border-bottom-right-radius:1.5rem;
   padding:1rem;
+  padding-left:0;
   font-size:0.9rem;
   letter-spacing:-0.02rem;
   display: flex;
@@ -117,7 +114,7 @@
   border-radius:1.5rem;
   border-top-left-radius:0;
   border-top-right-radius:0;
-  margin-bottom:0.5rem;
+  margin-bottom:1rem;
 }
 
 #main_body .routine_total p:first-child span em {
