--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -100,6 +100,7 @@
   border-bottom-right-radius:1.5rem;
   padding:1rem;
   padding-left:0;
+  padding-botton:0;
   font-size:0.9rem;
   letter-spacing:-0.02rem;
   display: flex;
@@ -110,7 +111,7 @@
 #main_body .routine_total p:first-child span:first-child {
   display:inline-block;
   background-color:#fff;
-  padding:0.5rem;
+  padding:1rem;
   border-radius:1.5rem;
   border-top-left-radius:0;
   border-top-right-radius:0;
