--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -100,7 +100,7 @@
   border-bottom-right-radius:1.5rem;
   padding:1rem;
   padding-left:0;
-  padding-botton:0;
+  padding-top:0;
   font-size:0.9rem;
   letter-spacing:-0.02rem;
   display: flex;
