--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -133,12 +133,12 @@
 #main_body .routine_total p span a {
   display: inline-flex;          
   align-items: center;          
-  justify-content: center;      
-  width: 3.2rem;
+  justify-content: center;
   height: 2rem;
   font-weight: bold;
-  padding-left: 2rem;        
+  padding-left: 1.5rem;        
   box-sizing: border-box;  
+  border-radius:1rem;
 }
 
 #main_body .routine_total p span a strong {
@@ -146,20 +146,24 @@
 }
 
 #main_body .routine_total p span a.not_done {
-  background: url('https://img.icons8.com/parakeet-line/50/cloud.png') no-repeat 0 0/2rem 2rem;
+  background-color:#fff;
+  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0 0/1rem 1rem;
 }
 
 #main_body .routine_total p span a.done {
-  background: url('https://img.icons8.com/parakeet-line/50/cloud-checked.png') no-repeat 0 0/2rem 2rem;
+  background-color:#80daff;
+  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0 0/1rem 1rem;
 }
 
 #main_body .routine_total p span a.fail_done {
-  background: url('../images/ico_cry.png') no-repeat 0 0/2rem 2rem;
+  background-color:#f1afff;
+  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0 0/1rem 1rem;
 }
 
 
 #main_body .routine_total p span a.ignored {
-  background: url('https://img.icons8.com/parakeet-line/50/dashed-cloud.png') no-repeat 0 0/2rem 2rem;
+  background-color:#cfcfcf;
+  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0 0/1rem 1rem;
 }
 
 #main_body .routine_total .filter_row {
