--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -135,6 +135,7 @@
   align-items: center;          
   justify-content: center;
   height: 2rem;
+  width:3rem;
   font-weight: bold;
   padding-left: 1.5rem;        
   box-sizing: border-box;  
