--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -135,9 +135,8 @@
   align-items: center;          
   justify-content: center;
   height: 2rem;
-  width:3rem;
   font-weight: bold;
-  padding-left: 1.5rem;        
+  padding: 0.5rem 2rem 0.5rem 2rem;        
   box-sizing: border-box;  
   border-radius:1rem;
 }
@@ -147,20 +146,20 @@
 }
 
 #main_body .routine_total p span a.not_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.5rem 0.5rem/1rem 1rem #fff;
+  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.5rem 0.5rem/1.5rem 1.5rem #fff;
 }
 
 #main_body .routine_total p span a.done {
-  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0.5rem 0.5rem/1rem 1rem #80daff;
+  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0.5rem 0.5rem/1.5rem 1.5rem #80daff;
 }
 
 #main_body .routine_total p span a.fail_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0.5rem 0.5rem/1rem 1rem #f1afff;
+  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0.5rem 0.5rem/1.5rem 1.5rem #f1afff;
 }
 
 
 #main_body .routine_total p span a.ignored {
-  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0.5rem 0.5rem/1rem 1rem #cfcfcf;
+  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0.5rem 0.5rem/1.5rem 1.5rem #cfcfcf;
 }
 
 #main_body .routine_total .filter_row {
