--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -139,6 +139,8 @@
   padding: 0.5rem 2rem 0.5rem 2rem;        
   box-sizing: border-box;  
   border-radius:1rem;
+  color:#333!important;
+  text-underline:none;
 }
 
 #main_body .routine_total p span a strong {
