--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -136,7 +136,8 @@
   justify-content: center;
   height: 2rem;
   font-weight: bold;
-  padding: 0.5rem 2rem 0.5rem 2rem;        
+  padding-left:2rem;
+  width:3rem;
   box-sizing: border-box;  
   border-radius:1rem;
   color:#333!important;
