--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -98,9 +98,7 @@
 #main_body .routine_total p:first-child {
   background-color:#797eff;
   border-bottom-right-radius:1.5rem;
-  padding:1rem;
-  padding-left:0;
-  padding-top:0;
+  padding:0 0.5rem 0.5rem 0;
   font-size:0.9rem;
   letter-spacing:-0.02rem;
   display: flex;
@@ -111,7 +109,7 @@
 #main_body .routine_total p:first-child span:first-child {
   display:inline-block;
   background-color:#fff;
-  padding:0.5rem;
+  padding:0.5rem 1rem 0.5rem 1rem;
   border-radius:1.5rem;
   border-top-left-radius:0;
   border-top-right-radius:0;
@@ -134,9 +132,9 @@
   display: inline-flex;          
   align-items: center;          
   justify-content: center;
-  height: 2rem;
+  line-height:1.5rem;
   font-weight: bold;
-  padding-left:2rem;
+  padding-left:1.5rem;
   width:3.3rem;
   box-sizing: border-box;  
   border-radius:1rem;
