--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -132,9 +132,9 @@
   display: inline-flex;          
   align-items: center;          
   justify-content: center;
-  line-height:2rem;
+  line-height:2.2rem;
   font-weight: bold;
-  padding:0 1.5rem 0 1.5rem;
+  padding:0 0.5rem 0 1.5rem;
   box-sizing: border-box;  
   border-radius:1rem;
   color:#333!important;
@@ -146,20 +146,21 @@
 }
 
 #main_body .routine_total p span a.not_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0 50%/1.5rem 1.5rem #fff;
+  color:#333!important;
+  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #fff;
 }
 
 #main_body .routine_total p span a.done {
-  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0 50%/1.5rem 1.5rem #80daff;
+  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #80daff;
 }
 
 #main_body .routine_total p span a.fail_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0 50%/1.5rem 1.5rem #f1afff;
+  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #f1afff;
 }
 
 
 #main_body .routine_total p span a.ignored {
-  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0 50%/1.5rem 1.5rem #cfcfcf;
+  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #cfcfcf;
 }
 
 #main_body .routine_total .filter_row {
