--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -86,6 +86,7 @@
   color:#333!important;
   font-weight:bold!important;
   background-color:#fff!important;
+  border:none!important
 }
 
 #main_body .date_fixed_today span.on {
@@ -93,6 +94,7 @@
 }
 
 #main_body .routine_total {
+  margin:0;
 }
 
 #main_body .routine_total p:first-child {
@@ -169,7 +171,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1rem 0;
+  margin:0;
   font-size:0.9rem;
 }
 
@@ -182,11 +184,21 @@
 
 #main_body .routine_total .filter_row .filter_buttons button {
   width:20%;
+  line-height:3rem;
   display:inline-block;
   background-color:#ebeffd;
   text-align:center;
   border-bottom-left-radius:1.5rem;
   border-bottom-right-radius:1.5rem;
+  color:#93a7ff;
+  font-size:0.9rem;
+  font-weight:bold
+}
+
+#main_body .routine_total .filter_row .filter_buttons button.on {
+  background-color:#797eff;
+  font-size:1rem;
+  color:#fff
 }
 
 
