--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -171,7 +171,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin:0;
+  margin-top:-1.5rem;
   font-size:0.9rem;
 }
 
@@ -179,7 +179,6 @@
   margin:0;
   padding:0;
   width:100%;
-  border:1px solid red;  
 }
 
 #main_body .routine_total .filter_row .filter_buttons button {
@@ -192,7 +191,11 @@
   border-bottom-right-radius:1.5rem;
   color:#93a7ff;
   font-size:0.9rem;
-  font-weight:bold
+  font-weight:bold;
+  gap:0;
+  margin:0;
+  padding:0;
+  padding-top:2rem;
 }
 
 #main_body .routine_total .filter_row .filter_buttons button.on {
