--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -1,57 +1,412 @@
+#main_body .no_data {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size:1.4rem;
+  line-height:1.7rem;
+  background-image: url('../images/ico_crying.png');
+  background-repeat: no-repeat;
+  background-size: 5rem 5rem;
+  background-position: top center;
+  font-family:'S-CoreDream-6Bold';
+  padding-top:5rem;
+}
+
+#main_body .no_data span {
+  display:block;
+  color:#666;
+  font-size:1rem;
+  margin-top:0.5rem;
+  font-family:'S-CoreDream-4Regular'
+}
+
+#main_body .date_scroll {
+  display: flex;
+  position: relative;
+  overflow-x: auto;
+  border-radius:1.5rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color:#fff;
+  border:1px solid #eaeaea;
+  border-bottom:none;
+  padding:0.5rem 1rem 0.5rem 1rem;
+}
+
+#main_body .date_fixed_today {
+  flex-shrink: 0;
+  position: sticky;
+  left: 0;
+  z-index: 10;
+  margin-right:0.2rem;
+  font-weight:bold
+}
+
+#main_body .date_scroll .date_group {
+  display: flex;
+  justify-content: flex-start;    
+  align-items: center;        
+  gap: 0.2rem;      
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
+#main_body .date_scroll::-webkit-scrollbar {
+  display: none;
+}
+
+#main_body .date_scroll .date_group span,
+#main_body .date_fixed_today span {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.4rem 1rem;
+  line-height: 1.1rem;
+  font-size: 1rem;
+  color: #999;
+  box-sizing: border-box;
+}
+#main_body .date_scroll .date_group i,
+#main_body .date_fixed_today i {
+  display:block;
+  color:#666;
+  line-height:0.8rem;
+  font-style:normal;
+  font-size:0.6rem;
+}
+
+#main_body .date_scroll .date_group span.on,
+#main_body .date_fixed_today span.on {
+  color:#333!important;
+  font-weight:bold!important;
+  background-color:#fff!important;
+  border:none!important
+}
+
+#main_body .date_fixed_today span.on {
+  border:none!important
+}
+
+#main_body .routine_total {
+  margin:0;
+}
+
 #main_body .routine_total p:first-child {
-  background-color: #797eff;
-  border-bottom-right-radius: 1.5rem;
-  padding: 0 1rem 0.5rem 0;
-  font-size: 0.9rem;
-  letter-spacing: -0.02rem;
+  background-color:#797eff;
+  border-bottom-right-radius:1.5rem;
+  padding:0 1rem 0.5rem 0;
+  font-size:0.9rem;
+  letter-spacing:-0.02rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  z-index: 2;
+}
+
+#main_body .routine_total p:first-child span:first-child {
+  display:inline-block;
+  background-color:#fff;
+  padding:0.25rem 1rem 0.25rem 1rem;
+  line-height:2.2rem;
+  border-radius:1.5rem;
+  border-top-left-radius:0;
+  border-top-right-radius:0;
+  margin-bottom:0.5rem;
+  border:1px solid #eaeaea;
+  border-top:none;
+}
+
+#main_body .routine_total p:first-child span em {
+  font-weight:bold!important
+}
+
+#main_body .routine_total p span {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem; 
+}
+
+#main_body .routine_total p span a {
+  display: inline-flex;          
+  align-items: center;          
+  justify-content: center;
+  font-weight: bold;
+  padding:0.5rem 0.5rem 0.5rem 2rem;
+  box-sizing: border-box;  
+  border-radius:1rem;
+  text-decoration:none;
+}
+
+#main_body .routine_total p span a strong {
+  display: none
+}
+
+#main_body .routine_total p span a em.t_on {
+  color:#333!important
+}
+
+#main_body .routine_total p span a.not_done {
+  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #fff;
+}
+
+#main_body .routine_total p span a.done {
+  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #80daff;
+}
+
+#main_body .routine_total p span a.fail_done {
+  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #f1afff;
+}
+
+
+#main_body .routine_total p span a.ignored {
+  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #cfcfcf;
 }
 
 #main_body .routine_total .filter_row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: -1.5rem;
-  font-size: 0.9rem;
-  position: relative;
-  z-index: 1;
+  margin-top:-1.5rem;
+  font-size:0.9rem;
 }
 
 #main_body .routine_total .filter_row .filter_buttons {
-  width: 100%;
-  display: flex;
-  gap: 0;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  border-bottom-left-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
+  margin:0;
+  padding:0;
+  width:100%;
 }
 
 #main_body .routine_total .filter_row .filter_buttons button {
-  flex: 1 1 20%;
-  display: block;
-  line-height: 3rem;
-  background-color: #ebeffd;
-  text-align: center;
-  color: #93a7ff;
-  font-size: 0.9rem;
-  font-weight: bold;
-  margin: 0;
-  padding: 2rem 0 0 0;
-  border: none;
-}
-
-#main_body .routine_total .filter_row .filter_buttons button + button {
-  border-left: 1px solid #fff;
+  width:20%;
+  line-height:3rem;
+  display:inline-block;
+  background-color:#ebeffd;
+  text-align:center;
+  border-bottom-left-radius:1.5rem;
+  border-bottom-right-radius:1.5rem;
+  color:#93a7ff;
+  font-size:0.9rem;
+  font-weight:bold;
+  gap:0;
+  margin:0;
+  padding:0;
+  padding-top:2rem;
 }
 
 #main_body .routine_total .filter_row .filter_buttons button.on {
-  background-color: #797eff;
-  font-size: 1rem;
-  color: #fff;
+  background-color:#797eff;
+  font-size:1rem;
+  color:#fff
+}
+
+
+#main_body .routine_total .filter_row .today,
+#main_body .routine_card .rc_inner i {
+  display:inline-block;
+  font-size:0.7rem;
+  font-weight:bold;
+  padding:0 0.3rem 0 0.3rem;
+  border-radius:1rem;
+  background-color:#ffde00;
+  border:1px solid #ffc600;
+}
+
+#main_body .routine_card .rc_inner i {
+  display:inline-block;
+  font-size:0.7rem;
+  font-weight:bold;
+  padding:0 0.3rem 0 0.3rem;
+  border-radius:1rem;
+  background-color:#ffde00;
+  border:1px solid #ffc600;
+}
+
+#main_body .routine_card {
+  background-color: #fff;
+  border: 1px solid #eaeaea;
+  border-radius: 1.5rem;
+  padding: 1.5rem;
+  text-align: left;
+  margin-bottom:1rem;
+  position:relative;
+}
+
+#main_body .routine_card.rt_off {
+  border:1px solid #eee;
+  background-color:#f5f5f5
+}
+
+#main_body .routine_card.rt_off .rc_inner {
+  opacity: 0.3;
+  position: relative;
+}
+
+#main_body .routine_card .rc_inner {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap:0.5rem;
+  flex-wrap: wrap;
+}
+
+#main_body .routine_card .rc_inner i {
+  font-style:normal;
+  background-color:#fff;
+  border:1px solid #333
+}
+
+#main_body .routine_card .rc_inner .left,
+#main_body .routine_card .rc_inner .right {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding:0;
+  margin:0;
+}
+
+#main_body .routine_card .rc_inner .left {
+  flex: 8;
+}
+
+#main_body .routine_card .rc_inner .right {
+  flex: 2;
+}
+
+#main_body .routine_card .rc_inner .left span[class^='color'] {
+  width:1rem;
+  height:1rem;
+  border-radius:50%;
+  margin-right:0.3rem;
+}
+
+
+#main_body .routine_card .rc_inner p {
+  display:block;
+  padding-left:2rem;
+  color:#666;
+  font-size:0.9rem;
+  letter-spacing:-0.02rem;
+  line-height:1.2rem;
+  margin-bottom:0.3rem;
+}
+
+#main_body .routine_card .rc_inner p.title {
+  font-weight:bold;
+  color:#333;
+  font-size:1rem;
+  margin-bottom:0.5rem;
+  line-height:1.2rem;
+  letter-spacing:-0.02rem;
+  padding:0 0 0.5rem 0
+}
+
+#main_body .routine_card .rc_inner p.title span {
+  vertical-align:middle;
+  margin-top:-0.1rem
+}
+
+#main_body .routine_card .setting {
+  height:1rem;
+  width:1rem;
+  position:absolute;
+  top:1.5rem;
+  right:1rem;
+  background: url('../images/ico_control.png') no-repeat 0 0/contain
+}
+
+#main_body .routine_card .setting span {
+  display:none
+}
+
+#main_body .routine_card .setting_popup {
+  position: absolute;
+  top: 0rem;
+  right: 0rem; 
+  background: #fff;
+  border: 1px solid #333;
+  border-radius: 1rem;
+  padding:1.5rem;
+  z-index: 10;
+  font-size:0.9rem;
+}
+
+#main_body .routine_card .setting_popup .close_spop {
+  position:absolute;
+  top:0.8rem;
+  right:0.8rem;
+  width:1rem;
+  height:1rem;
+  padding:0;
+  background: url('../images/ico_close.png') no-repeat 0 0/100%!important
+}
+
+#main_body .routine_card .setting_popup .close_spop span {
+  display:none
+}
+
+#main_body .routine_card .setting_popup li {
+  line-height:1.6rem
+}
+
+#main_body .routine_card .setting_popup li button {
+  padding-left:2rem;
+}
+
+#main_body .routine_card .setting_popup li.disabled {
+  opacity: 0.3;
+  pointer-events: none;
+}
+
+#main_body .routine_card .setting_popup button.modify {
+  background: url('../images/ico_modify.png') no-repeat 0 50%/0.9rem 0.9rem
+}
+
+#main_body .routine_card .setting_popup button.lock {
+  background: url('../images/ico_lock.png') no-repeat 0 50%/0.9rem 0.9rem
+}
+
+#main_body .routine_card .setting_popup button.share {
+  background: url('../images/ico_share02.png') no-repeat 0 50%/0.9rem 0.9rem
+}
+
+#main_body .routine_card .setting_popup button.del {
+  background: url('../images/ico_del.png') no-repeat 0 50%/0.9rem 0.9rem
+}
+
+#main_body .routine_card .rc_inner p.term {
+  background: url('../images/ico_mark.png') no-repeat 0.1rem 0.1rem/0.9rem 0.9rem
+}
+#main_body .routine_card .rc_inner p.se_date {
+ background: url('../images/ico_pin.png') no-repeat 0.1rem 0.1rem/0.9rem 0.9rem
+}
+#main_body .routine_card .rc_inner p.alaram {
+ background: url('../images/ico_alaram.png') no-repeat 0.1rem 0.1rem/0.9rem 0.9rem
+}
+#main_body .routine_card .rc_inner p.comment {
+ background: url('../images/ico_comment.png') no-repeat 0.1rem 0.1rem/0.9rem 0.9rem
+}
+
+#main_body .routine_card .rc_inner .right {
+  text-align:center;
+}
+
+#main_body .routine_card .rc_inner .done_set {
+  width:100%;
+  flex-basis: 100%;
+}
+
+#main_body .routine_card .rc_inner .ruffys_item span {
+  width:3rem;
+  height:3rem;
+  margin:0;
+  padding:0;
+}
+
+#main_body .routine_card .rc_inner .ruffys_item span {
+  background-size:100%!important
 }
