--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -176,10 +176,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top:-1.5rem;
   font-size:0.9rem;
   position:relative; 
   z-index:1;
+  margin-top:-2rem;
+  margin-bottom:1rem;
 }
 
 #main_body .routine_total .filter_row .filter_buttons {
@@ -189,10 +190,11 @@
   overflow:hidden;
   display:grid; 
   grid-template-columns:repeat(5, minmax(0,1fr));
+  gap:0;
 }
 
 #main_body .routine_total .filter_row .filter_buttons button {
-  display:block; 
+  display:inline-block; 
   line-height:3rem;
   background-color:#ebeffd;
   text-align:center;
