--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -111,6 +111,7 @@
   align-items: center;
   position:relative; 
   z-index:2;
+  color:#fff
 }
 
 #main_body .routine_total p:first-child span:first-child {
@@ -145,6 +146,7 @@
   box-sizing: border-box;  
   border-radius:1rem;
   text-decoration:none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 #main_body .routine_total p span a strong {
@@ -156,7 +158,7 @@
 }
 
 #main_body .routine_total p span a.not_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #fff;
+  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #fffimportant;
 }
 
 #main_body .routine_total p span a.done {
